<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_menucard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Menu card"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Burger"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Menu*"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_classic"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inside_classic"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgerprice_classic"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menuprice_classic"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/classicOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_letsrumble"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inside_letsrumble"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgerprice_letsrumble"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menuprice_letsrumble"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/letsRumbleOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_rumbleinthejungle"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inside_rumbleinthejungle"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgerprice_rumbleinthejungle"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menuprice_rumbleinthejungle"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/rumbleInTheJungleOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_greenbeast"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inside_greenbeast"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgerprice_greenbeast"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menuprice_greenbeast"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/greenBeastOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_pollo"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inside_pollo"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgerprice_pollo"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menuprice_pollo"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/polloOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2sp">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_gorilla"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inside_gorilla"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burgerprice_gorilla"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menuprice_gorilla"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/gorillaOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/order" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:text="*Includes soda and fries" />
</LinearLayout>